--- a/portfolio.css
+++ b/portfolio.css
@@ -114,7 +114,7 @@ body::-webkit-scrollbar {
 }
 
 #smile{
-  font-weight: 500;
+  font-weight:800;
 }
 #Companies div{
   margin-right: 1rem;
@@ -164,7 +164,7 @@ body::-webkit-scrollbar {
     #iconset svg{
         width: 21px;
         height: 21px;
-        fill: var(--smicon);
+        fill: var(--para);
         margin-left: 24px;
     }
 .scroll{
