--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,7 @@
 
 :root{
   --body:#fdefff;
-    --para:#808080;
+    --para:#666666;
     /* --toolbg:#F6F6F6;
     --expbg:#F6F6F6;
     --potfoliobg:#F1F5FE; */
@@ -41,6 +41,7 @@
   position: fixed;
   z-index: 100;
 }
+
 
 
 body::-webkit-scrollbar { 
@@ -133,11 +134,9 @@ body::-webkit-scrollbar {
 .card-text{
   font-size: 14px;
   color: var(--para);
-  font-weight: 300;
 }
 .card-title{
   font-size: 16px;
-  color: var(--smicon);
 }
 
 
@@ -228,6 +227,12 @@ body::-webkit-scrollbar {
       #thankyou{
         display: none;
       }
+      #common_para{
+        font-size: 14px;
+        color: var(--para);
+        text-align: justify;
+      
+      }
      
   
  
@@ -236,14 +241,17 @@ body::-webkit-scrollbar {
 @media only screen and (width: 1200px) {
 
  
-  #md{
+  /* #md{
     display: none;
 }
      
 .scroll{
   display: none;
  }
- 
+  */
+  body{
+    display: none;
+  }
 }
 
 
@@ -493,7 +501,7 @@ body::-webkit-scrollbar {
             height: 33px;
           }
           #common_para{
-            font-size: 16px;
+            font-size: 14px;
             color: var(--para);
             font-weight: 300;text-align: justify;
             margin-bottom: 0;
