--- a/portfolio.css
+++ b/portfolio.css
@@ -34,7 +34,7 @@
 }
 
 #preloader{
-  background: #ffffff url(Circles-menu-3.gif) no-repeat center center;
+  background: var(--body) url(Circles-menu-3.gif) no-repeat center center;
   background-size: 8vh;
   height: 100vh;
   width: 100%;
