--- a/portfolio.css
+++ b/portfolio.css
@@ -211,7 +211,7 @@ body::-webkit-scrollbar {
       width: 1.5vw;
       height: 1.5vw;
       fill: var(--para);
-      margin-left: 24px;
+      margin-left: 1.5vw;
   }#iconset svg:hover{
     fill: var(--main1);
 }
