--- a/portfolio.css
+++ b/portfolio.css
@@ -54,11 +54,14 @@
 #nav-tab button:hover{
   border: none;
 }
+#nslogo{
+  height: 2.142vw;
+}
 #nav-tab button.active{
   color: var(--smicon) ;
   border-color: var(--body);
-  border: none;
   border-radius: 0;
+  box-sizing: border-box;
   border-bottom: 3px solid var(--main);
 }
 #nav-tab{
@@ -220,6 +223,10 @@ body::-webkit-scrollbar {
 }
 #btn_download{
     display: flex;
+    font-size: 1vw;
+  }
+  #btn_download img{
+    height: 1vw;
   }
   #md{
     display: none;
@@ -276,6 +283,9 @@ body::-webkit-scrollbar {
         text-align: justify;
       
       }
+      #nslogo{
+        height: 30px;
+      }
      
   
  
@@ -298,6 +308,8 @@ body::-webkit-scrollbar {
       overflow-y: scroll;
     }
     
+    
+    
     #md{
         display: flex;
         flex-direction: column;margin-top: 14vh;
@@ -312,6 +324,10 @@ body::-webkit-scrollbar {
    
     #btn_download{
         display: flex;
+        font-size: 14px;
+      }
+      #btn_download img{
+        height: 14px;
       }
       #hamburger{
         display: none;
@@ -343,6 +359,14 @@ body::-webkit-scrollbar {
       #btmd{
         display: none;
       }
+      #nslogo{
+        height: 30px;
+      }
+      #iconset svg{
+        width: 25px;
+        height: 25px;
+        fill: var(--para);
+        margin-left: 18px;}
 }
 
 
@@ -368,6 +392,10 @@ body::-webkit-scrollbar {
       }
     #btn_download{
         display: flex;
+        font-size: 14px;
+      }
+      #btn_download img{
+        height: 14px;
       }
       #hamburger{
         display: none;
@@ -399,6 +427,9 @@ body::-webkit-scrollbar {
       }
       #btmd{
         display: none;
+      }
+      #nslogo{
+        height: 30px;
       }
 }
 
@@ -453,6 +484,9 @@ body::-webkit-scrollbar {
       }
       #btmd{
         display: flex;
+      }
+      #nslogo{
+        height: 30px;
       }
 }
 
@@ -540,6 +574,9 @@ body::-webkit-scrollbar {
             font-weight: 300;text-align: justify;
             margin-bottom: 0;
           
+          }
+          #nslogo{
+            height: 30px;
           }
 }
 
