--- a/portfolio.css
+++ b/portfolio.css
@@ -63,6 +63,7 @@
   border-radius: 0;
   box-sizing: border-box;
   border-bottom: 3px solid var(--main);
+  outline: none;
 }
 #nav-tab{
   border-color: var(--body);
